# GigaClock

./: .gitignore  Cargo.toml  alarm.db
alarm/: package.json  pnpm-lock.yaml
alarm/src/: app.html
alarm/src/lib/: utils.ts
alarm/src/routes/: +page.svelte
migrations/: test  user.sql
src/: authenticate_token.rs  google_oauth.rs  handler.rs  main.rs  model.rs
