[package]
name = "GigaClock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
lazy_static = "1.4.0"
futures = "0.3.28"
awmp = "0.8.1"
tokio = "1.32.0"
actix-files = "0.6.2"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
